--- a/page2.html
+++ b/page2.html
@@ -1,210 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="keywords" content="seo, design agency, atlanta web designer"/>
-    <meta name="description" content="I'm Mike and your should hire me to build your website"/>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
-    />
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
 
-    <link rel="stylesheet" type="text/css" href="./css/bootstrap.css" />
-    <link href="style.css" rel="preload" as="style" onload="this.rel='stylesheet'">
-    <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
-    <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="keywords" content="seo, design agency, atlanta web designer" />
+  <meta name="description" content="I'm Mike and your should hire me to build your website" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
 
-    <script src="./js/jquery-2.1.0.js"></script>
-    <script src="./js/bootstrap.js"></script>
-    <script src="./js/blocs.js"></script>
-    <script src="./js/jquery.touchSwipe.js"></script>
-    <script src="./js/gmaps.js"></script>
+  <link rel="stylesheet" type="text/css" href="./css/bootstrap.css" />
+  <link href="style.css" rel="preload" as="style" onload="this.rel='stylesheet'">
+  <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
+  <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
 
-	<title>GoMikesDesign</title>
+  <script src="./js/jquery-2.1.0.js"></script>
+  <script src="./js/bootstrap.js"></script>
+  <script src="./js/blocs.js"></script>
+  <script src="./js/jquery.touchSwipe.js"></script>
+  <script src="./js/gmaps.js"></script>
 
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-DSHGJ3GSJ5"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "G-DSHGJ3GSJ5");
-    </script>
-  </head>
-  <body>
-    <Main-container>
-      <div class="page-container">
-        <section class="bloc-0">
-          <div class="bloc bgc-white l-bloc" id="bloc-0">
-            <div class="container bloc-sm">
-              <nav class="navbar row">
-                <div class="navbar-header">
-                  <a class="navbar-brand" href="index.html"
-                    ><img
-					src="img/new_compression_photos/atlanta web design logo.webp"
-					alt="design agency"
-					width="214px"
-					height="40"
-				  /></a>
-                  <button
-                    id="nav-toggle"
-                    type="button"
-                    class="ui-navbar-toggle navbar-toggle"
-                    data-toggle="collapse"
-                    data-target=".navbar-1"
-                  >
-                    <span class="sr-only">Toggle navigation</span
-                    ><span class="icon-bar"></span><span class="icon-bar"></span
-                    ><span class="icon-bar"></span>
+  <title>GoMikesDesign</title>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DSHGJ3GSJ5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+    gtag("config", "G-DSHGJ3GSJ5");
+  </script>
+</head>
+
+<body>
+  <Main-container>
+    <div class="page-container">
+      <section class="bloc-0">
+        <div class="bloc bgc-white l-bloc" id="bloc-0">
+          <div class="container bloc-sm">
+            <nav class="navbar row">
+              <div class="navbar-header">
+                <a class="navbar-brand" href="index.html"><img src="img/newphotos/atlanta.web.design.logo.webp"
+                    alt="design_agency" style="width:214px" height="40"/></a>
+                <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse"
+                  data-target=".navbar-1">
+                  <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
+                    class="icon-bar"></span><span class="icon-bar"></span>
+                </button>
+              </div>
+              <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+                <ul class="site-navigation nav navbar-nav">
+                  <li>
+                    <a href="index.html">Home</a>
+                  </li>
+                  <li></li>
+                  <li>
+                    <a href="page2.html">Contact</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </div>
+        </div>
+      </section>
+
+      <section class="bloc-6">
+        <div class="bloc bg-dots-bg bg-repeat bgc-dark-slate-blue d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+          <div class="container bloc-lg">
+            <div class="row">
+              <div class="col-sm-12">
+                <p class="text-center hero-bloc-text tc-white">
+                  Let&rsquo;s talk web design!
+                </p>
+                <p class="text-center mg-lg tc-white tight-width-whitespace">
+                  I&rsquo;m super excited that you want to work together.<br />Please
+                  fill in the form below or get in touch so I can learn about
+                  your project <br />and we can setup time to &nbsp;talk
+                  websites and Atlanta city love.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="bloc-7">
+        <div class="bloc bgc-white l-bloc" id="bloc-7">
+          <div class="container bloc-lg">
+            <div class="moving-row">
+              <div class="col-sm-23">
+                <form id="form_1" novalidate success-msg="Your message has been sent."
+                  fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+                  <div class="form-group">
+                    <div id="firstname">First name:</div> <input type="text" aria-labelledby="firstname">
+                  </div>
+                  <div class="form-group">
+                    <div id="Email">Email:</div> <input type="text" aria-labelledby="Email">
+                  </div>
+                  <div class="form-group">
+                    <div id="how-did-you-find-me">How did you find me? </div> <input type="text"
+                      aria-labelledby="question">
+                  </div>
+                  <div class="form-group">
+                    <div id="details">Message</div> <input type="text" aria-labelledby="leave a message">
+                  </div>
+                  <button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+                    Let's go Mike
                   </button>
-                </div>
-                <div
-                  class="collapse navbar-collapse navbar-1 special-dropdown-nav"
-                >
-                  <ul class="site-navigation nav navbar-nav">
-                    <li>
-                      <a href="index.html">Home</a>
-                    </li>
-                    <li></li>
-                    <li>
-                      <a href="page2.html">Contact</a>
-                    </li>
-                  </ul>
-                </div>
-              </nav>
-            </div>
-          </div>
-        </section>
-
-        <section class="bloc-6">
-          <div
-            class="bloc bg-dots-bg bg-repeat bgc-dark-slate-blue d-bloc bloc-bg-texture texture-paper"
-            id="bloc-6"
-          >
-            <div class="container bloc-lg">
-              <div class="row">
-                <div class="col-sm-12">
-                  <p class="text-center hero-bloc-text tc-white">
-                    Let&rsquo;s talk web design!
-                  </p>
-                  <p class="text-center mg-lg tc-white tight-width-whitespace">
-                    I&rsquo;m super excited that you want to work together.<br />Please
-                    fill in the form below or get in touch so I can learn about
-                    your project <br />and we can setup time to &nbsp;talk
-                    websites and Atlanta city love.
-                  </p>
-                </div>
+                </form>
+              </div>
+              <div class="col-sm-24">
+                <p>
+                  mike@gomikedesigns.com<br />+1 (404) 555-1234<br />
+                  <br />123 Peachtree Ave. Atlanta, GA<br />Available 9am–5pm,
+                  Mon-Fri <br />
+                  <br />Interested to learn about my freelace services?
+                  <br />Please visit my&nbsp;<a class="ltc-atomic-tangerine" href="index.html">other page</a>.
+                </p>
               </div>
             </div>
           </div>
-        </section>
+        </div>
+      </section>
 
-        <section class="bloc-7">
-          <div class="bloc bgc-white l-bloc" id="bloc-7">
-            <div class="container bloc-lg">
-              <div class="moving-row">
-                <div class="col-sm-23">
-                  <form
-                    id="form_1"
-                    novalidate
-                    success-msg="Your message has been sent."
-                    fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"
-                  >
-                    <div class="form-group">
-						<div id="firstname">First name:</div> <input type="text" aria-labelledby="firstname">
-                    </div>
-                    <div class="form-group">
-						<div id="Email">Email:</div> <input type="text" aria-labelledby="Email">
-                    </div>
-                    <div class="form-group">
-						<div id="how-did-you-find-me">How did you find me? </div> <input type="text" aria-labelledby="question">
-                    </div>
-                    <div class="form-group">
-						<div id="details">Message</div> <input type="text" aria-labelledby="leave a message">
-                    </div>
-                    <button
-                      class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine"
-                      type="submit"
-                    >
-                      Let's go Mike
-                    </button>
-                  </form>
-                </div>
-                <div class="col-sm-24">
-                  <p>
-                    mike@gomikedesigns.com<br />+1 (404) 555-1234<br />
-                    <br />123 Peachtree Ave. Atlanta, GA<br />Available 9am–5pm,
-                    Mon-Fri <br />
-                    <br />Interested to learn about my freelace services?
-                    <br />Please visit my&nbsp;<a
-                      class="ltc-atomic-tangerine"
-                      href="index.html"
-                      >other page</a
-                    >.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
+      <section class="ScrollToTop Button">
+        <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span
+            class="fa fa-chevron-up"></span></a>
+      </section>
 
-        <section class="ScrollToTop Button">
-          <a
-            class="bloc-button btn btn-d scrollToTop"
-            onclick="scrollToTarget('1')"
-            ><span class="fa fa-chevron-up"></span
-          ></a>
-        </section>
-
-        <section class="Footer">
-          <div class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8">
-            <div class="container bloc-sm">
-              <div class="row">
-                <div class="col-sm-12">
-                  <p class="text-center white">
-                    GoMike Designs - Web designer living and loving Atlanta.<br />
-                  </p>
-                  <div class="row row-no-gutters social">
-                    <div class="col-sm-3">
-                      <div class="text-center">
-                        <a class="social" href="index.html" aria-label="link to twitter">
-                          <span class="fa fa-twitter icon-md"></span
-                        ></a>
-                      </div>
+      <section class="Footer">
+        <div class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8">
+          <div class="container bloc-sm">
+            <div class="row">
+              <div class="col-sm-12">
+                <p class="text-center white">
+                  GoMike Designs - Web designer living and loving Atlanta.<br />
+                </p>
+                <div class="row row-no-gutters social">
+                  <div class="col-sm-3">
+                    <div class="text-center">
+                      <a class="social" href="index.html" aria-label="link to twitter">
+                        <span class="fa fa-twitter icon-md"></span></a>
                     </div>
-                    <div class="col-sm-3">
-                      <div class="text-center">
-                        <a class="social" href="index.html" aria-label="link to facebook">
-                          <span class="fa fa-facebook icon-md"></span
-                        ></a>
-                      </div>
+                  </div>
+                  <div class="col-sm-3">
+                    <div class="text-center">
+                      <a class="social" href="index.html" aria-label="link to facebook">
+                        <span class="fa fa-facebook icon-md"></span></a>
                     </div>
-                    <div class="col-sm-3">
-                      <div class="text-center">
-                        <a class="social" href="index.html" aria-label="link to dribbble">
-                          <span class="fa fa-dribbble icon-md"></span
-                        ></a>
-                      </div>
+                  </div>
+                  <div class="col-sm-3">
+                    <div class="text-center">
+                      <a class="social" href="index.html" aria-label="link to dribbble">
+                        <span class="fa fa-dribbble icon-md"></span></a>
                     </div>
-                    <div class="col-sm-3">
-                      <div class="text-center">
-                        <a class="social" href="index.html" aria-label="link to instagram">
-                          <span class="fa fa-instagram icon-md"></span
-                        ></a>
-                      </div>
+                  </div>
+                  <div class="col-sm-3">
+                    <div class="text-center">
+                      <a class="social" href="index.html" aria-label="link to instagram">
+                        <span class="fa fa-instagram icon-md"></span></a>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </section>
-      </div>
-    </Main-container>
-  </body>
+        </div>
+      </section>
+    </div>
+  </Main-container>
+</body>
+
 </html>
